# clerq-assessment

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/routers/: settlement_router.py
src/schemas/: settlement.py
src/services/: acme.py
tests/integration/: test_settlement.py
